--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@types/leaflet": "^1.9.12",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
