--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_MAPTILER_API_KEY=DX482iciNeCEpK46Apc0
 NEXT_PUBLIC_MAPTILER_DATA_ID=01968f0b-97b7-74ea-b044-391c487fe792
+NEXT_PUBLIC_MAPTILER_BATHROOMS_DATA_ID=0196ad0a-f7fa-7dba-83b7-d1e9a81e1576
