--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@maptiler/leaflet-maptilersdk": "^4.0.3",
     "@maptiler/sdk": "^3.2.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@types/leaflet": "^1.9.12",
     "@vercel/analytics": "^1.2.2",
@@ -24,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "fuse.js": "^7.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
